--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,3 +4,12 @@
 
 - include: main-debian-7.yml
   when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '7'
+
+- include: main-centos-6.yml
+  when: ansible_distribution == 'CentOS' and ansible_distribution_major_version == '6'
+
+- shell: docker --version
+  register: docker_version
+  changed_when: False
+
+- debug: var=docker_version.stdout
