--- a/tasks/main-centos-6.yml
+++ b/tasks/main-centos-6.yml
@@ -3,12 +3,16 @@
 
 - yum: name={{ item }} state=latest
   with_items:
+    - libvirt
+    - libvirt-client
+    - device-mapper-libs
+    - python-virtinst
     - docker-io
 
 - service: name=docker state=started enabled=yes
+  when: not docker_test
 
 - template: src=docker.j2 dest=/etc/default/docker owner=root group=root mode=0640
+  when: not docker_test
   notify: restart-docker
 
-- name: start docker
-  service: name=docker state=running enabled=true
