--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,14 +5,14 @@
 - include: main-debian-7.yml
   when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '7'
 
-# Remark, the following error occurs when testing on a CentOS6 Docker container.
-# "/var/run/docker.pid still exists..."
-# "docker_version.stdout": "Docker version 1.4.1, build 5bc2ff8/1.4.1"
+- include: main-debian-8.yml
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '8'
+
 - include: main-centos-6.yml
   when: ansible_distribution == 'CentOS' and ansible_distribution_major_version == '6'
 
-- shell: docker --version
-  register: docker_version
-  changed_when: False
-
-- debug: var=docker_version.stdout
+#- shell: docker --version
+#  register: docker_version
+#  changed_when: False
+#
+#- debug: var=docker_version.stdout
