--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,8 @@
 ---
 galaxy_info:
-  author: your name
+  author: Onno Lissenberg
   description: 
-  company: your company (optional)
+  company: Onno Lissenberg
   # Some suggested licenses:
   # - BSD (default)
   # - MIT
@@ -10,8 +10,8 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
-  min_ansible_version: 1.2
+  license: MIT
+  min_ansible_version: 2.x
   #
   # Below are all platforms currently available. Just uncomment
   # the ones that apply to your role. If you don't see your 
@@ -125,4 +125,3 @@ dependencies: []
   # dependencies available via galaxy should be listed here.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
-  
