Remove centos 6 docker-io

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
 # handlers file for docker
 
-- name: restart-docker
-  service: name=docker state=restarted enabled=true
+#- name: restart-docker
+#  service: name=docker state=restarted enabled=true
