--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,9 @@
 ---
 # tasks file for docker
 
+- apt: name={{ item }} state=latest
+  with_items:
+    - python-pip
+
 - include: main-debian-8.yml
   when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '8'
-
-- include: main-centos-6.yml
-  when: ansible_distribution == 'CentOS' and ansible_distribution_major_version == '6'
