--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,9 +2,9 @@
 # tasks file for docker
 
 - name: Install pip
-  apt: name={{ item }} state=absent
-  with_items:
-    - python-pip
+  apt: 
+    name: ['python-pip'] 
+    state: absent
 
 # How do I fix 'ImportError: cannot import name IncompleteRead'?
 # https://stackoverflow.com/questions/27341064/how-do-i-fix-importerror-cannot-import-name-incompleteread
@@ -13,3 +13,14 @@
 
 - include: main-debian-8.yml
   when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '8'
+
+- include: main-debian-9.yml
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '9'
+
+- name: "Adding user(s) to the docker group"
+  user:
+    name: "{{ item }}"
+    groups:
+      - docker
+    append: yes
+  with_items: "{{ docker_users }}"
